crates/omega_app/src/snapshots/omega_app__operation__tests__shell_success.snap
---
source: crates/omega_app/src/operation.rs
expression: to_value(actual)
---
<shell_output
  command="ls -la"
  shell="/bin/bash"
  exit_code="0"
>
<stdout
  total_lines="3"
><![CDATA[total 8
drwxr-xr-x  2 user user 4096 Jan  1 12:00 .
drwxr-xr-x 10 user user 4096 Jan  1 12:00 ..]]>
</stdout>
</shell_output>
